--- a/finance-overview/src/app/app.component.html
+++ b/finance-overview/src/app/app.component.html
@@ -8,6 +8,7 @@
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
 <!-- Toolbar -->
+
 <div class="toolbar" role="banner">
   <img
     width="40"
@@ -124,6 +125,7 @@
       />
     </svg>
   </div>
-
-  <router-outlet></router-outlet>
+ 
+  <!-- <mat-slider min="1" max="100" step="1" value="50"></mat-slider> -->
 </div>
+ <router-outlet></router-outlet>
