--- a/finance-overview/src/app/app.component.html
+++ b/finance-overview/src/app/app.component.html
@@ -125,7 +125,15 @@
       />
     </svg>
   </div>
- 
+
   <!-- <mat-slider min="1" max="100" step="1" value="50"></mat-slider> -->
 </div>
- <router-outlet></router-outlet>
+
+<!-- CSS only -->
+<link
+  href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+  rel="stylesheet"
+  integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+  crossorigin="anonymous"
+/>
+<router-outlet></router-outlet>
