--- a/finance-overview/src/app/home/home.component.html
+++ b/finance-overview/src/app/home/home.component.html
@@ -1,12 +1,15 @@
-<mat-grid-list cols="2" rowHeight="1:.2">
-  <mat-grid-tile>
-    <mat-list role="list">
-      <h2>MY cards list</h2>
-      <mat-list-item role="listitem">Amount :34</mat-list-item>
-      <mat-list-item role="listitem">Net:00</mat-list-item>
-      <mat-list-item role="listitem">Item 3</mat-list-item>
-    </mat-list>
-  </mat-grid-tile>
-  <!-- 2nd tiles -->
-  
-</mat-grid-list>
+
+Hello
+
+
+<div class="card">
+  <div class="card-body">
+    <h1 class="card-title">Zulifqar's  Cards</h1>
+    <h4 class="card-subtitle mb-2 text-muted">Total {{amount.Discover}}</h4>
+    <h4 class="card-subtitle mb-2 text-muted">Total {{amount.Chase}}</h4>
+    <h4 class="card-subtitle mb-2 text-muted">Total {{amount.BOA}}</h4>
+    <!-- <button type="button" class="btn btn-dark" (click)="getAmount()">Click here to get the amount</button> -->
+    <a href="#" class="card-link">Card link</a>
+    <a href="#" class="card-link">Another link</a>
+  </div>
+</div>
